typescript/checker/tests/conformance/parser/ecmascript5/EnumDeclarations/parserEnum5.ts.stderr
error: TS1005
 --> $DIR/tests/conformance/parser/ecmascript5/EnumDeclarations/parserEnum5.ts:2:12
  |
2 | enum E3 { a: 1, }
  |            ^

error: TS2452
 --> $DIR/tests/conformance/parser/ecmascript5/EnumDeclarations/parserEnum5.ts:2:14
  |
2 | enum E3 { a: 1, }
  |              ^

error: TS1005
 --> $DIR/tests/conformance/parser/ecmascript5/EnumDeclarations/parserEnum5.ts:3:15
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |               ^

error: TS2452
 --> $DIR/tests/conformance/parser/ecmascript5/EnumDeclarations/parserEnum5.ts:3:17
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |                 ^

error: TS1005
 --> $DIR/tests/conformance/parser/ecmascript5/EnumDeclarations/parserEnum5.ts:3:24
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |                        ^

error: TS2452
 --> $DIR/tests/conformance/parser/ecmascript5/EnumDeclarations/parserEnum5.ts:3:26
  |
3 | enum E1 { a, b: 1, c, d: 2 = 3 }
  |                          ^

